March 2016 5.3
  - Requires PHP 5.4.0 or higher
  - Windows: support management of fax number
  - Login can show display name instead of server URL
  - Personal/Unix: support K5KEY hash type for smbk5pwd
  - New NIS netgroup module for hosts
  - fixed bugs:
   -> autoload errors in tree view
  - LAM Pro:
   -> Support for LDAP views based on nsview object class
   -> Password notification jobs support to print expiration date in email


15.12.2015 5.2
  - Windows: support for additional attributes (jpegPhoto, title, carLicense,
    employeeNumber, employeeType, businessCategory, departmentNumber, ou, o, manager)
  - SSH public key: added possibility to add/remove SSH extension
  - MIT Kerberos: set krbExtraData for new accounts
  - IMAP: allow to specify initial folders to create
  - LAM Pro:
   -> Users: allow to manage IP addresses with ipHost module
   -> Self Service: added time zone setting in self service profile
   -> Shadow: added job to notify before Shadow password expires
   -> Windows: added job to notify before Windows password expires


31.08.2015 5.1
  - IMAP: support Windows users
  - SSH public key: check uploaded files if in right format
  - LAM Pro:
   -> Self Service optimized also for mobile devices
   -> MySQL support for cron jobs
   -> Self registration: support auto-numbering for attributes (e.g. to create Unix accounts)


30.06.2015 5.0
  - Microsoft IE 8 no longer supported
  - Security: added CSRF protection
  - NIS net groups: user module to manage NIS net groups on user page
  - Zarafa users: allow to change display format of "Send As"
  - User list: support to filter by account status
  - Lamdaemon: update group of home directory if user's primary group changes
  - Personal: allow to add ou=addressbook subentry for users (RFE 117)
  - Unix: support auto-UID/GID with msSFU30DomainInfo
  - Windows groups: support editing of member of
  - Central time zone setting in server profile
  - LAM Pro: